# parseltongue

./: .buildinfo  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.rst  Vagrantfile  docker-compose.yaml  examples.html  genindex.html  index.html  installation.html  objects.inv  ptongue.pyx  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/api/: modules.doctree  reahl.ptongue.doctree  reahl.ptongue.gemstonecontrol.doctree
.github/workflows/: ci.yml  deploy.yml
_modules/: index.html
_modules/ptongue/: gemproxy.html  gemproxylinked.html  gemproxyrpc.html  gemstonecontrol.html
_sources/: examples.rst.txt  quickstart.rst.txt
_sources/api/: modules.rst.txt  ptongue.gemproxyrpc.rst.txt  ptongue.gemstone.rst.txt  ptongue.gemstonecontrol.rst.txt  ptongue.rst.txt  reahl.ptongue.rst.txt  (+1 more)
api/: modules.html  ptongue.gemproxy.html  ptongue.gemproxylinked.html  ptongue.gemproxyrpc.html  ptongue.gemstone.html  ptongue.gemstonecontrol.html  ptongue.html  reahl.ptongue.gemstonecontrol.html  reahl.ptongue.html
docs/: Makefile  README.md  conf.py  examples.rst  fix_apidoc.py  index.rst  installation.rst  quickstart.rst
documentation/: gemstone_cheat_sheet.html  gemstone_cheat_sheet.rst  jade_login.html  jade_login.rst  topaz_login.html  topaz_login.rst
gemstone/: answersForInstallgs.sh  defineGemStoneEnvironment.sh  gemShell.sh  gemVars.sh  installGemStone.sh  installGemStoneCi.sh  installgs  systemChanges.sh
ptongue/: __init__.py  gembuildertypes.pxd  gembuildertypes.pyx  gemproxy.pxd  gemproxy.py  gemproxy.pyx  gemproxylinked.py  gemproxylinked.pyx  gemproxymultithread.pyx  gemproxyrpc.py  gemproxyrpc.pyx  gemproxysinglethread.pyx  gemstone.py  gemstonecontrol.py
ptongue_dev/: test_ptongue.py  test_ptongue.py.rej  test_ptonguesingle.py
scripts/: bootstrap.sh  buildForGemstone.sh  installPython.sh  run-in-container.sh  runTestsCi.sh  setupGit.sh
test1/: main.c
(+42 files in other folders)
