[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parseltongue"
version = "2.0.1"
description = "Python bindings for GemStone/S 64 Bit"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "Iwan Vosloo", email = "iwan@reahl.org"},
    {name = "Craig Sparks", email = "craig@reahl.org"}
]
readme = "README.rst"
dependencies = [
    "reahl-component",
    "packaging"
]

[project.optional-dependencies]
test = [
    "pytest",
    "reahl-component",
    "reahl-tofu"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinxcontrib-apidoc>=0.3.0",
]

[tool.setuptools]
packages = ["ptongue"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["ptongue_dev"]

[tool.sphinx-docs]
source_dir = "docs"
build_dir = "docs/_build"
builder = "html"

